--- a/google.html
+++ b/google.html
@@ -19,16 +19,21 @@
       </div>
       <div class="topright">
         <ul>
-          <li><a class="navright" href="#gmail">Gmail</a></li>
+          <li><a class="navright" id="signIn">Sign In</a></li>
+          <li><a class="navright"><image id="grid" src="https://cdn1.iconfinder.com/data/icons/material-core/16/apps-128.png" width=15px height=15px></a></li>
           <li><a class="navright" href="#images">Images</a></li>
-
+          <li><a class="navright" href="#gmail">Gmail</a></li>
         </ul>
 
       </div>
     </ul>
   </div>
   <div class="center">
-    <img id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google">
+    <img id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google"><br>
+    <div id="searchbar">
+      <input type="text">
+      <a href="#"><img id="mic" src="https://upload.wikimedia.org/wikipedia/commons/2/22/Google_microphone_logo.png"></a>
+    </div><br>
     </div>
   </div>
   <div class="botnav"></div>
